# Redes

p1/: cliente  cliente.c  clienteUDP  clienteUDP.c  funcionSelect  funcionSelect.c  funcionTiempo  funcionTiempo.c  redes p1  servidor  servidor.c  servidorUDP.c
p2/: .gitignore  CMakeLists.txt  Makefile  README.md  clienteDomino  clienteDomino.c  clienteDomino.cpp  ejemploClienteChat  ejemploServidorChat  ejemploServidorTCP  getServByName.c  servidorDomino  servidorDomino.c  servidorDomino.cpp  usuarios.txt
p2/src/: clienteDomino.cpp  main.cpp  servidorDomino.cpp
p2/src/domino/: domino.cpp  domino.hpp
p2/src/domino/ficha/: ficha.hpp
p2/src/domino/jugador/: jugador.cpp  jugador.hpp
p2/src/domino/tablero/: tablero.cpp  tablero.hpp
